# localatt_emorecog

./: .gitignore  CMakeLists.txt  WORKSPACE  cmd.sh  emo2.cc  extract_lld.sh  generate_mfcc.sh  make_kefu.py  make_king601.py  make_wav_cat_and_utt.py  mkl.BUILD  mkl_linux.BUILD  mykaldi.BUILD  path.sh  prepare_list.sh  run.py  run.sh  run2_2.py  run3.py  steps  torch.BUILD  torch_linux.BUILD  utils
conf/: gpu.conf
emo/: 20190724_emo.scp  BUILD  CMakeLists.txt  CMakeLists_hsl.txt  Makefile-emo  Makefile-emo-xvector  emo-xvector.cc  emo-xvector2.cc  emo.cc  emo2.cc  emo3.cc  inference.cpp  mfcc_hires.conf  online_cmvn.conf  online_pitch.conf  traced_model_eval.pth  wav_1_result.scp  wav_2_result.cp  wav_2_result_centos.scp
iemocap/: make_dataset.py  make_expcase.py  make_king601_csv.sh
localatt/: get_class_weight.py  lld_dataset.py  localatt.py  train.py  validate_lazy.py
